# videoplayercomponent

./: .gitignore  CMakeLists.txt  README.md  videoplayercomponent.sln
playerdemo/: CMakeLists.txt  playerdemo.cpp  playerdemo.vcproj
videoplayercomponent/: CMakeLists.txt  ReadMe.txt  ffmpegfunctions.cpp  ffmpegfunctions.h  playerwindow.cpp  playerwindow.h  playwindowhelper.cpp  playwindowhelper.h  stdafx.cpp  videoplayercomponent.cpp  videoplayercomponent.h  videoplayercomponent.vcproj
videoplayercomponent/exportinclude/: playerwindowinterface.h
